# lab06

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  README.md  README03.md  READMED.md  check.txt
.github/workflows/: ci.yml  test.yml
banking/: Account.cpp  Account.h  CMakeLists.txt  Transaction.cpp  Transaction.h
banking/tests/: test_account.cpp  test_transaction.cpp
banking/tests/mocks/: MockAccount.hpp  MockTransaction.hpp
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
tests/: test1.cpp
